--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -691,12 +691,12 @@ input[type='submit']:hover {
 
     #game {
         width: auto;
-        height: 50vh;
+        // height: 50vh;
     }
 
     #questions {
         width: auto;
-        height: 50vh;
+        // height: 50vh;
     }
 
     div div {
@@ -776,12 +776,12 @@ input[type='submit']:hover {
 
     #game {
         width: auto;
-        height: auto;
+        // height: auto;
     }
 
     #questions {
         width: auto;
-        height: auto;
+        // height: auto;
     }
 
     div div {
