--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,15 @@
-body {
+body,
+input,
+select,
+textarea,
+button {
   margin: 0;
   padding: 0;
-  font: 14px 'Montserrat', Helvetica, Arial, sans-serif; }
+  font: 14px 'Montserrat', Helvetica, Arial, sans-serif;
+  background-color: #330000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23D18'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.4'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover; }
 
 a {
   color: #00b7ff; }
@@ -20,7 +28,8 @@ a {
   width: 45%; }
 
 #content {
-  display: flex; }
+  display: flex;
+  box-shadow: 0 0 20px 10px indigo; }
 
 div div {
   display: inline-flex;
@@ -1067,21 +1076,19 @@ div #dice-4 {
       font-size: 32px;
       font-weight: 400; }
   #questions section#answers {
-    margin: 10px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 0;
     flex-wrap: wrap; }
     #questions section#answers .temporary {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: orangered;
+      background: linear-gradient(to left, #ff8c00, #ff0043);
       border-radius: 1000px;
       flex-wrap: wrap;
-      margin: 30px 40px;
-      transition: transform 1s; }
+      margin: 20px 20px;
+      transition: transform 0.5s; }
       #questions section#answers .temporary .answer {
         display: flex;
         justify-content: center;
@@ -1091,17 +1098,24 @@ div #dice-4 {
         border-radius: 1000px;
         border: none;
         border-right: 1px solid red;
-        flex-wrap: wrap;
         width: auto;
         visibility: hidden; }
         #questions section#answers .temporary .answer h1 {
-          cursor: default; }
+          cursor: default;
+          font-weight: 500; }
     #questions section#answers #full_answer {
       display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
       width: 100%;
-      margin: 10px 10px 20px 10px; }
+      margin: 10px 10px 10px 10px; }
       #questions section#answers #full_answer form {
-        width: 100%; }
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap; }
       #questions section#answers #full_answer #answer_input {
         width: 100%;
         border: none;
@@ -1111,7 +1125,9 @@ div #dice-4 {
         font-size: 28px;
         color: black;
         box-shadow: 0 5px 5px red;
-        padding: 0 10px; }
+        padding: 5px 10px;
+        color: white;
+        border-radius: 1000px; }
 
 @keyframes slide_left {
   0% {
@@ -1130,18 +1146,19 @@ div #dice-4 {
     transform: translate(-50px); } }
 
 #answer_input::placeholder {
-  color: black;
+  color: white;
   font-size: 28px;
   font-weight: inherit; }
 
 .check_button {
-  width: 100%;
+  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px 20px;
   background-color: transparent;
-  border: none; }
+  border: none;
+  margin-top: 5px; }
 
 input[type='submit'] {
   padding: 10px 20px;
@@ -1150,7 +1167,8 @@ input[type='submit'] {
   border: none;
   box-shadow: 0 0 10px 5px orange;
   transition: all 0.5s;
-  background-color: lightgreen; }
+  background-color: lightgreen;
+  color: white; }
 
 input[type='submit']:hover {
   background-color: cyan;
@@ -1170,7 +1188,21 @@ input[type='submit']:hover {
     height: 18px;
     width: 17px; }
   #div-113 {
-    border-width: 10px; } }
+    border-width: 10px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 10px;
+    width: 10px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 10px;
+    width: 10px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 11px; } }
 
 @media screen and (min-width: 500px) {
   #main-div {
@@ -1180,7 +1212,21 @@ input[type='submit']:hover {
     height: 32px;
     width: 31px; }
   #div-113 {
-    border-width: 17px; } }
+    border-width: 17px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 20px;
+    width: 20px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 20px;
+    width: 20px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 12px; } }
 
 @media screen and (min-width: 700px) {
   #main-div {
@@ -1190,7 +1236,19 @@ input[type='submit']:hover {
     height: 38px;
     width: 36px; }
   #div-113 {
-    border-width: 19px; } }
+    border-width: 19px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 23px;
+    width: 23px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 23px;
+    width: 23px; } }
 
 @media screen and (min-width: 850px) {
   #main-div {
@@ -1204,7 +1262,21 @@ input[type='submit']:hover {
     height: 45px;
     width: 43px; }
   #div-113 {
-    border-width: 22px; } }
+    border-width: 22px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 30px;
+    width: 30px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 30px;
+    width: 30px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 13px; } }
 
 @media screen and (min-width: 992px) {
   #content {
@@ -1222,7 +1294,21 @@ input[type='submit']:hover {
     height: 32px;
     width: 30px; }
   #div-113 {
-    border-width: 17px; } }
+    border-width: 17px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 22px;
+    width: 22px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 22px;
+    width: 22px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 14px; } }
 
 @media screen and (min-width: 1200px) {
   #main-div {
@@ -1232,7 +1318,21 @@ input[type='submit']:hover {
     height: 39px;
     width: 37px; }
   #div-113 {
-    border-width: 20px; } }
+    border-width: 20px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 28px;
+    width: 28px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 28px;
+    width: 28px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 15px; } }
 
 @media screen and (min-width: 1360px) {
   #main-div {
@@ -1242,7 +1342,21 @@ input[type='submit']:hover {
     height: 45px;
     width: 43px; }
   #div-113 {
-    border-width: 23px; } }
+    border-width: 23px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 32px;
+    width: 32px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 32px;
+    width: 32px; }
+  #questions section#answers .temporary .answer h1 {
+    font-size: 16px; } }
 
 @media screen and (min-width: 1560px) {
   #main-div {
@@ -1252,7 +1366,19 @@ input[type='submit']:hover {
     height: 52px;
     width: 49px; }
   #div-113 {
-    border-width: 26px; } }
+    border-width: 26px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 35px;
+    width: 35px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 35px;
+    width: 35px; } }
 
 @media screen and (min-width: 1860px) {
   #main-div {
@@ -1262,6 +1388,18 @@ input[type='submit']:hover {
     height: 58px;
     width: 55px; }
   #div-113 {
-    border-width: 29px; } }
+    border-width: 29px; }
+  #piece-red-1,
+  #piece-red-2,
+  #piece-red-3,
+  #piece-red-4 {
+    height: 40px;
+    width: 40px; }
+  #piece-green-1,
+  #piece-green-2,
+  #piece-green-3,
+  #piece-green-4 {
+    height: 40px;
+    width: 40px; } }
 
 /*# sourceMappingURL=style.css.map */
