--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,7 +1,15 @@
-body {
+body,
+input,
+select,
+textarea,
+button {
     margin: 0;
     padding: 0;
     font: 14px 'Montserrat', Helvetica, Arial, sans-serif;
+    background-color: #330000;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23D18'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.4'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 a {
@@ -29,6 +37,7 @@ a {
 
 #content {
     display: flex;
+    box-shadow: 0 0 20px 10px indigo;
 }
 
 // div {
@@ -565,22 +574,23 @@ div {
     }
 
     section#answers {
-        margin: 10px 10px;
+        // margin: 10px 10px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 60px 0;
+        // padding: 30px 0;
         flex-wrap: wrap;
 
         .temporary {
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: orangered;
+            // background-color: orangered;
+            background: linear-gradient(to left, #ff8c00, #ff0043);
             border-radius: 1000px;
             flex-wrap: wrap;
-            margin: 30px 40px;
-            transition: transform 1s;
+            margin: 20px 20px;
+            transition: transform 0.5s;
             .answer {
                 display: flex;
                 justify-content: center;
@@ -590,24 +600,32 @@ div {
                 border-radius: 1000px;
                 border: none;
                 border-right: 1px solid red;
-                flex-wrap: wrap;
+                // flex-wrap: wrap;
                 // margin: 50px 50px;
                 width: auto;
                 visibility: hidden;
 
                 h1 {
                     cursor: default;
+                    font-weight: 500;
                 }
             }
         }
 
         #full_answer {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
             width: 100%;
-            margin: 10px 10px 20px 10px;
+            margin: 10px 10px 10px 10px;
 
             form {
                 width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
             }
             #answer_input {
                 width: 100%;
@@ -619,7 +637,9 @@ div {
                 font-size: 28px;
                 color: black;
                 box-shadow: 0 5px 5px red;
-                padding: 0 10px;
+                padding: 5px 10px;
+                color: white;
+                border-radius: 1000px;
             }
         }
     }
@@ -649,19 +669,20 @@ div {
 }
 
 #answer_input::placeholder {
-    color: black;
+    color: white;
     font-size: 28px;
     font-weight: inherit;
 }
 
 .check_button {
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px 20px;
     background-color: transparent;
     border: none;
+    margin-top: 5px;
 }
 
 input[type='submit'] {
@@ -672,6 +693,7 @@ input[type='submit'] {
     box-shadow: 0 0 10px 5px orange;
     transition: all 0.5s;
     background-color: lightgreen;
+    color: white;
 }
 
 input[type='submit']:hover {
@@ -707,6 +729,25 @@ input[type='submit']:hover {
     #div-113 {
         border-width: 10px;
     }
+
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 10px;
+        width: 10px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 10px;
+        width: 10px;
+    }
+
+    #questions section#answers .temporary .answer h1 {
+        font-size: 11px;
+    }
 }
 @media screen and (min-width: 500px) {
     // #content {
@@ -733,6 +774,23 @@ input[type='submit']:hover {
 
     #div-113 {
         border-width: 17px;
+    }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 20px;
+        width: 20px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 20px;
+        width: 20px;
+    }
+    #questions section#answers .temporary .answer h1 {
+        font-size: 12px;
     }
 }
 
@@ -761,6 +819,20 @@ input[type='submit']:hover {
 
     #div-113 {
         border-width: 19px;
+    }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 23px;
+        width: 23px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 23px;
+        width: 23px;
     }
 }
 
@@ -792,6 +864,23 @@ input[type='submit']:hover {
     #div-113 {
         border-width: 22px;
     }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 30px;
+        width: 30px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 30px;
+        width: 30px;
+    }
+    #questions section#answers .temporary .answer h1 {
+        font-size: 13px;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -822,6 +911,23 @@ input[type='submit']:hover {
     #div-113 {
         border-width: 17px;
     }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 22px;
+        width: 22px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 22px;
+        width: 22px;
+    }
+    #questions section#answers .temporary .answer h1 {
+        font-size: 14px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -849,6 +955,23 @@ input[type='submit']:hover {
 
     #div-113 {
         border-width: 20px;
+    }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 28px;
+        width: 28px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 28px;
+        width: 28px;
+    }
+    #questions section#answers .temporary .answer h1 {
+        font-size: 15px;
     }
 }
 
@@ -878,6 +1001,23 @@ input[type='submit']:hover {
     #div-113 {
         border-width: 23px;
     }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 32px;
+        width: 32px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 32px;
+        width: 32px;
+    }
+    #questions section#answers .temporary .answer h1 {
+        font-size: 16px;
+    }
 }
 
 @media screen and (min-width: 1560px) {
@@ -906,6 +1046,20 @@ input[type='submit']:hover {
     #div-113 {
         border-width: 26px;
     }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 35px;
+        width: 35px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 35px;
+        width: 35px;
+    }
 }
 
 @media screen and (min-width: 1860px) {
@@ -933,5 +1087,19 @@ input[type='submit']:hover {
 
     #div-113 {
         border-width: 29px;
+    }
+    #piece-red-1,
+    #piece-red-2,
+    #piece-red-3,
+    #piece-red-4 {
+        height: 40px;
+        width: 40px;
+    }
+    #piece-green-1,
+    #piece-green-2,
+    #piece-green-3,
+    #piece-green-4 {
+        height: 40px;
+        width: 40px;
     }
 }
