--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,8 @@
 
         <div id="full_answer">
           <form action="/check:<%= quest.identity %> " method="post">
-            <input type="text" id="answer_input" placeholder="Your answer will appear here!" name="answer_box">
+            <input type="text" id="answer_input" placeholder="Your answer will appear here!" name="answer_box"
+              autocomplete="off">
             <div class="check_button">
               <input type="submit" name="check_ans" id="checkme">
             </div>
